pgmq-rs/src/install/snapshots/pgmq__install__script__tests__migrations_script__new.snap
---
source: src/install/script.rs
expression: script
---
MigrationScript {
    name: ParsedScriptName {
        original: "pgmq--1.11.0--1.11.1.sql",
        from: Version {
            major: 1,
            minor: 11,
            patch: 0,
        },
        to: Version {
            major: 1,
            minor: 11,
            patch: 1,
        },
    },
    content: "-- 1.11.0 -> 1.11.1\n",
}
