pgmq-rs/src/install/snapshots/pgmq__install__script__tests__migrations_script__new_script_not_found.snap
---
source: src/install/script.rs
expression: script
---
Err(
    InstallationError(
        "Migration script file not found: pgmq--111.111.111--222.222.222.sql",
    ),
)
